// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Months /> all months after august (not incl) should be disabled 1`] = `
<div
  className="datetime-months"
  style={
    Object {
      "width": 200,
    }
  }
>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Jan
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Feb
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Mar
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Apr
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      May
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Jun
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Jul
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Aug
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content datetime-month__content_disabled"
    >
      Sep
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content datetime-month__content_disabled"
    >
      Oct
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content datetime-month__content_disabled"
    >
      Nov
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content datetime-month__content_disabled"
    >
      Dec
    </div>
  </div>
</div>
`;

exports[`<Months /> simple render 1`] = `
<div
  className="datetime-months"
  style={
    Object {
      "width": 200,
    }
  }
>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Jan
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Feb
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Mar
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Apr
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      May
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Jun
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Jul
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Aug
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Sep
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Oct
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Nov
    </div>
  </div>
  <div
    className="datetime-month"
    onClick={[Function]}
  >
    <div
      className="datetime-month__content"
    >
      Dec
    </div>
  </div>
</div>
`;
